--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     </main>
     <footer>
         <section>
-            <div class="container">
+            <div class="container-footer">
                 <div class="content-footer">
-                    <span></span>
+                    <h1><span></span>Veja seu Carrinho<i class="fa-solid fa-cart-shopping"></i></h1>
                 </div>
             </div>
         </section>
